# seldom-platform

./: .gitignore  README.md  architecture.drawio
backend/: 1.py  Dockerfile  Pipfile  README.md  dev.sqlite3  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  uwsgi.ini
backend/app_case/: admin.py  api.py  api_schma.py  apps.py  models.py  running.py  tests.py
backend/app_case/api_utils/: __init__.py
backend/app_case/migrations/: 0001_initial.py  0002_auto_20220918_2145.py  0002_testcase_label_testcasetemp_label.py  0002_testcase_report.py  0003_alter_caseresult_id_alter_testcase_id.py  0003_testcase_error_testcase_result_testcase_status_and_more.py  0004_testcase_case_hash_alter_testcase_case_name_and_more.py  0004_testcase_run_time_alter_testcase_result.py  (+1 more)
backend/app_project/: admin.py  api.py  api_schma.py  apps.py  models.py  tests.py
backend/app_task/: admin.py  api.py  api_schma.py  apps.py  models.py  running.py  tests.py
backend/app_team/: admin.py  api.py  api_schma.py  apps.py  models.py  tests.py
backend/app_user/: api.py  api_schema.py  apps.py  tests.py
backend/app_utils/: __init__.py  background.py  email_utila.py  email_utils.py  git_utils.py  module_utils.py  pagination.py  permission.py  project_utils.py  response.py  running_utils.py  token.py
backend/backend/: api.py  config.py  settings.py  urls.py
backend/docs/: deploy.md
backend/logs/: log.txt
backend/reports/: 1654965562.html  1654965723.html  1656439000.xml  1716275493.xml  1_1716275534.xml  8_1692777900.xml
backend/utils/: response.py
(+178 files in other folders)
