[project]
name = "backend"
version = "0.1.0"
description = "Backend application for seldom-platform"
readme = "README.md"
requires-python = ">=3.8, <3.12"
dependencies = [
    "django==4.2.11",
    "django-ninja==1.3.0",
    "django-cors-headers==3.13.0",
    "django-redis==5.2.0",
    "pyjwt==2.10.0",
    "seldom==3.11.0"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
